<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_settings">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/inner_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.ActionBar.Primary"
            app:title="Settings"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:navigationIconTint="@color/white"/>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/appbar">
        <com.google.android.material.textview.MaterialTextView
            android:text="@string/temp_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:id="@+id/MBGroupTemp"
            android:layout_gravity="end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degreeC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/c"
                style="?attr/materialButtonOutlinedStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/degreeF"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f"
                style="?attr/materialButtonOutlinedStyle"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>



    </FrameLayout>

    <FrameLayout
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/one">
        <com.google.android.material.textview.MaterialTextView

            android:text="@string/wind_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:id="@+id/MBGroupWind"
            android:layout_gravity="end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/speed_ms"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/m_s"
                style="?attr/materialButtonOutlinedStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/speed_kmh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/km_h"
                style="?attr/materialButtonOutlinedStyle"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>



    </FrameLayout>

    <FrameLayout
        android:id="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/two">
        <com.google.android.material.textview.MaterialTextView

            android:text="@string/pressure_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:id="@+id/MBGroupPressure"
            android:layout_gravity="end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pressure_mmHg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mmHg"
                style="?attr/materialButtonOutlinedStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/pressure_hPa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hpa"
                style="?attr/materialButtonOutlinedStyle"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>



    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>